src/test/scala/au/edu/mq/comp/perentiemq/iml/prederr5.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/prederr5.iml:3:20: error: ')' expected
    assert (a >= b >= c);
                   ^

